unpackaged/main/default/objects/Renewal_Opportunity__mdt/Renewal_Opportunity__mdt.object-meta.xml
<CustomObject>
    <label>Renewal Opportunity</label>
    <pluralLabel>Renewal Opportunities</pluralLabel>
</CustomObject>