unpackaged/main/default/objects/Renewal_Opportunity__mdt/fields/Amount_of_Days__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_Days__c</fullName>
    <label>Amount of Days</label>
    <length>10</length>
    <type>Text</type>
</CustomField>