unpackaged/main/default/objects/Renewal_Opportunity__mdt/fields/Days_Specified__c.field-meta.xml
<CustomField>
    <fullName>Days_Specified__c</fullName>
    <label>Days Specified</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>