unpackaged/main/default/objects/Renewal_Opportunity__mdt/fields/Increase_Rate__c.field-meta.xml
<CustomField>
    <fullName>Increase_Rate__c</fullName>
    <label>Increase Rate Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>