unpackaged/main/default/objects/Renewal_Opportunity__mdt/fields/Opportunity_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Record_Type__c</fullName>
    <label>Opportunity Record Type</label>
    <length>18</length>
    <type>Text</type>
</CustomField>